--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "next": "15.4.5",
-    "mongoose": "^8.0.0",
-    "openai": "^4.20.1",
-    "dotenv": "^16.3.1"
+    "openai": "^4.20.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
